[package]
name = "netstack_derive"
version = "0.3.0"
authors = ["Andreas Fischer <vengarioth@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "netstack_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
