[package]
name = "netstack_prometheus"
version = "0.1.0"
authors = ["Andreas Fischer <home@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstack = { path = "../netstack" }
prometheus = "0.8"
lazy_static = "1.4"
