[package]
name = "client"
version = "0.1.0"
authors = ["Andreas Fischer <home@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstack = { path = "../../netstack" }
netstack_derive = { path = "../../netstack_derive" }
