[package]
name = "client"
version = "0.3.0"
authors = ["Andreas Fischer <vengarioth@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstack = { path = "../../netstack" }
netstack_derive = { path = "../../netstack_derive" }
ureq = "0.12"
base58 = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
